--- a/src/program/packetblaster/README
+++ b/src/program/packetblaster/README
@@ -1,6 +1,7 @@
 Usage:
   packetblaster replay
   packetblaster synth
+  packetblaster gen
   packetblaster lwaftr
 
 Use --help for per-command usage.
