snabb trace: add --directory option to point at Snabb shm dumps

--- a/src/program/trace/README
+++ b/src/program/trace/README
@@ -5,6 +5,8 @@ Usage:
                              Print usage information.
   -p, --pid <pid>
                              Select <pid> explicitly.
+  -d, --directory <path>
+                             Use process SHM directory at <path>.
 
 SUBCOMMANDS
 
